Trigger a repaint of The Playlist when using a shortcut to set/unset "stop after this track"

BUG: 230569